--- a/hack-a-thing/src/App.css
+++ b/hack-a-thing/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+
 .App {
   text-align: center;
 }
@@ -7,14 +10,8 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: black;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +32,49 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+#Navbar {
+  display: flex;
+  height:50px;
+  align-items: center;
+  top: 0;
+  background-color: black;
+  border-width: 1px;
+  border-style: solid;
+  border-left: black;
+  border-right: black;
+  border-image: radial-gradient(black, white) 1;
+  justify-content: space-between;
+}
+
+#Navbar .nav-links {
+  display: flex;
+  gap: 20px;
+  margin-right: 10px;
+}
+
+#Navbar .nav-links a{
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-family: Lato;
+  font-size: 30px;
+  margin: 10px;
+  justify-content: flex-end;
+}
+
+
+#Navbar .nav-name{
+  display: flex;
+  gap: 20px;
+  margin-right: 10px;
+}
+
+#Navbar .nav-name a{
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-family: Lato;
+  font-size: 30px;
+  margin: 10px;
+  justify-content: flex-start;
 }
