--- a/hack-a-thing/src/App.css
+++ b/hack-a-thing/src/App.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Space+Grotesk:wght@300..700&display=swap');
 
 
+/*
 @font-face {
   font-family: 'Dimitri';
-  src: url('src/dimitri') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+  src: local('Dimitri'), url(./src/dimitri/DIMITRI_.TTF) format('truetype');
 }
+*/
 
 body {
   margin: 0;
@@ -33,6 +34,8 @@ body {
 .App {
   text-align: center;
   background-color: #B1DDF1;
+  overflow-y: auto;
+  padding-bottom: 200px;
 }
 
 .App-logo {
@@ -74,7 +77,7 @@ body {
 }
 
 #Navbar .nav-links a{
-  color: #0D160B;
+  color: white;
   text-decoration: none;
   font-family: Lato;
   font-size: 30px;
@@ -98,26 +101,44 @@ body {
   justify-content: flex-start;
 }
 
+
+#topLink{
+  box-sizing: border-box;
+  border-style: solid;
+  background: #083D77;
+  padding-left: 10px;
+  padding-right: 10px;
+  box-shadow: 5px 5px;
+
+}
+
 .HorizontalList {
   border-style: solid;
-  border-color: black;
+  border-color: white;
 }
 
 #AboutMeBox{
   display: flex;
   flex-direction: row; 
-  justify-content: space-around;  
+  justify-content: space-around;
 }
 
-span.BigParagraph {
+.BigParagraph {
   display: flex;
-  width: 50%;
-  float: right;
+  width: 70%;
   font-family: Lato;
   color: white;
+  border-style: solid;
+  border-color: black;
+  justify-content: center;
+  margin: 30px;
+  box-shadow: 10px 10px;
 }
 
 span.BigParagraph h1{
   font-family: Lato;
   color: white;
+  
 }
+
+
