--- a/hack-a-thing/src/App.css
+++ b/hack-a-thing/src/App.css
@@ -2,18 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Space+Grotesk:wght@300..700&display=swap');
 
-
-/*
-@font-face {
-  font-family: 'Dimitri';
-  src: local('Dimitri'), url(./src/dimitri/DIMITRI_.TTF) format('truetype');
-}
-*/
-
 body {
   margin: 0;
   padding: 0;
-  background-color: #B1DDF1;
+  background-color: #313B72;
 }
 
 @keyframes App-logo-spin {
@@ -33,9 +25,9 @@ body {
 
 .App {
   text-align: center;
-  background-color: #B1DDF1;
+  background-color: #313B72;
   overflow-y: auto;
-  padding-bottom: 200px;
+  padding-bottom: 10vh;
 }
 
 .App-logo {
@@ -60,29 +52,35 @@ body {
 
 #Navbar {
   display: flex;
+
   height:50px;
-  align-items: center;
+  align-items: flex-end;
   top: 0;
-  background-color: #B1DDF1;
+  background-color: transparent;
   border-width: 1px;
   border-left: black;
   border-right: black;
-  justify-content: space-between;
+  justify-content: flex-end;
+  padding-top: 3vh;
+  position: sticky;
+  z-index: 1;
+
 }
 
 #Navbar .nav-links {
   display: flex;
-  gap: 20px;
-  margin-right: 10px;
+  gap: 2vw;
+  margin-right: 1vw;
 }
 
 #Navbar .nav-links a{
-  color: white;
+  background-color: #C8ADC0;
   text-decoration: none;
-  font-family: Lato;
-  font-size: 30px;
-  margin: 10px;
+  font-family: Space Grotesk;
+  font-size: 2vw;
+  margin: 0.5vw;
   justify-content: flex-end;
+  color: black;
 }
 
 
@@ -103,14 +101,23 @@ body {
 
 
 #topLink{
+  position: relative;
   box-sizing: border-box;
   border-style: solid;
   background: #083D77;
   padding-left: 10px;
   padding-right: 10px;
-  box-shadow: 5px 5px;
-
+  box-shadow: 1vh 1vh;
+  transition: all ease 0.3s;
+  top: 0px;
 }
+
+
+#topLink:hover{
+  box-shadow: 0.5vh 0.5vh;
+  top: 3px;
+}
+
 
 .HorizontalList {
   border-style: solid;
@@ -124,33 +131,51 @@ body {
 }
 
 .BigParagraph {
+  background-color: #B1DDF1;
   display: flex;
-  width: 70%;
-  font-family: Lato;
+  width: auto;
+  height: auto;
+  font-family: Space Grotesk;
   color: white;
   border-style: solid;
   border-color: black;
-  justify-content: center;
-  margin: 30px;
-  box-shadow: 10px 10px;
+  justify-content: flex-start;
+  margin-left: 20vh;
+  margin-right: 10vh;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+  box-shadow: 1vh 1vh;
+  box-sizing: border-box;
 }
 
-span.BigParagraph h1{
-  font-family: Lato;
-  color: white;
+div.BigParagraph h1{
+  color: black;
+  font-size: 3.4vh;
+  font-family: Space Grotesk;
+}
+
+.BigParagraph img{
+  margin: 0.4vw;
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+  display: block;
 }
 
 #ContactBox{
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-start;
+  align-items: center;
   margin-top: 10vh;
-  margin-left: 20vh;
-  width: 150vh;
-  
+  margin-left: 5vw;
+  width: 90vw;
+  font-family: Space Grotesk;
+  box-sizing: border-box;
 }
 
 #ContactBox a{
+  text-decoration: none;
+  color: black;
   flex: 1 0 40%;
   padding: 2vh;
   border-style: solid;
@@ -170,7 +195,6 @@ span.BigParagraph h1{
   box-shadow: 3.5vh 3.5vh;
   
 }
-
 
 #ContactBox a:first-child{
   flex: 0 1 100%;
