--- a/hack-a-thing/src/App.css
+++ b/hack-a-thing/src/App.css
@@ -6,21 +6,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #313B72;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  display: flex;
 }
 
 .App {
@@ -53,18 +39,17 @@ body {
 #Navbar {
   display: flex;
 
-  height:50px;
+  height:5vh;
   align-items: flex-end;
   top: 0;
   background-color: transparent;
-  border-width: 1px;
+  border-width: 0.1vw;
   border-left: black;
   border-right: black;
   justify-content: flex-end;
   padding-top: 3vh;
   position: sticky;
   z-index: 1;
-
 }
 
 #Navbar .nav-links {
@@ -119,10 +104,112 @@ body {
 }
 
 
+.BigParagraph {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  width: 85%;
+  max-width: 100%;
+  height: auto;
+
+  background-color: #B1DDF1;
+  
+  font-family: Space Grotesk;
+
+  color: white;
+  border-style: solid;
+  border-color: black;
+
+  margin-left: 10vh;
+  margin-right: 10vh;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+
+  box-shadow: 1vh 1vh;
+  box-sizing: border-box;
+
+  max-width: 100%;
+  overflow: hidden;
+}
+
+div.BigParagraph h1{
+  margin: 4vh 6vw;
+  color: black;
+  font-size: 125%;
+  font-family: Space Grotesk;
+}
+
+.BigParagraph img{
+  flex-shrink: 1;
+  margin: 20%;
+
+  max-width: 200%;
+  height: auto;
+  min-width: none;
+
+  object-fit: contain;
+  display: block;
+}
+
 .HorizontalList {
   border-style: solid;
   border-color: white;
 }
+
+.Projects {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap:wrap;
+
+  width: 80vw;
+  height: auto; 
+  
+  background-color: #CBDF90;
+  border: solid white;
+  
+  margin: 10vh auto; 
+
+  padding:1vh;
+}
+
+.Projects div {
+  display: flex;
+  justify-content: flex-start; 
+  align-items: center; 
+  flex-direction: row;
+}
+
+.Projects h1 {
+  font-family: Space Grotesk;
+  text-align: center; 
+  margin: 1%; 
+}
+
+.Projects img{
+  width: 30%;
+  height: auto;
+  margin: 1% 5%;
+}
+
+.Projects p{
+  margin: 0;
+  line-height: 1.5;
+
+  font-family: Space Grotesk;
+  text-align: left;
+}
+
+#ProjectTitle {
+  background-color: #DBB4AD;
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  width: 90vw;
+}
+
 
 #AboutMeBox{
   display: flex;
@@ -130,37 +217,6 @@ body {
   justify-content: space-around;
 }
 
-.BigParagraph {
-  background-color: #B1DDF1;
-  display: flex;
-  width: auto;
-  height: auto;
-  font-family: Space Grotesk;
-  color: white;
-  border-style: solid;
-  border-color: black;
-  justify-content: flex-start;
-  margin-left: 20vh;
-  margin-right: 10vh;
-  margin-top: 5vh;
-  margin-bottom: 5vh;
-  box-shadow: 1vh 1vh;
-  box-sizing: border-box;
-}
-
-div.BigParagraph h1{
-  color: black;
-  font-size: 3.4vh;
-  font-family: Space Grotesk;
-}
-
-.BigParagraph img{
-  margin: 0.4vw;
-  max-width: 100%;
-  height: auto;
-  object-fit: contain;
-  display: block;
-}
 
 #ContactBox{
   display: flex;
