--- a/website-files/src/App.css
+++ b/website-files/src/App.css
@@ -41,21 +41,21 @@ body {
 
   height:5vh;
   align-items: flex-end;
-  top: 0;
+  justify-content: flex-end;
   background-color: transparent;
   border-width: 0.1vw;
   border-left: black;
   border-right: black;
-  justify-content: flex-end;
   padding-top: 3vh;
   position: sticky;
   z-index: 1;
+  top: 1.5vh;
 }
 
 #Navbar .nav-links {
   display: flex;
   gap: 2vw;
-  margin-right: 1vw;
+  margin-right: 7vw;
 }
 
 #Navbar .nav-links a{
@@ -63,44 +63,27 @@ body {
   text-decoration: none;
   font-family: Space Grotesk;
   font-size: 2vw;
-  margin: 0.5vw;
+  margin: 0.75vw;
   justify-content: flex-end;
   color: black;
 }
 
-
-#Navbar .nav-name{
-  display: flex;
-  gap: 20px;
-  margin-right: 10px;
-}
-
-#Navbar .nav-name a{
-  color: #0D160B;
-  text-decoration: none;
-  font-family: Lato;
-  font-size: 30px;
-  margin: 10px;
-  justify-content: flex-start;
-}
-
-
 #topLink{
+  width: 14vw;
+  align-self: center;
   position: relative;
   box-sizing: border-box;
   border-style: solid;
   background: #083D77;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 1% 2.5%;
   box-shadow: 1vh 1vh;
   transition: all ease 0.3s;
-  top: 0px;
 }
 
 
 #topLink:hover{
   box-shadow: 0.5vh 0.5vh;
-  top: 3px;
+  top: 0.25vh;
 }
 
 
@@ -109,8 +92,6 @@ body {
   flex-direction: row;
   align-items: center;
 
-  width: 85%;
-  max-width: 100%;
   height: auto;
 
   background-color: #B1DDF1;
@@ -129,7 +110,7 @@ body {
   box-shadow: 1vh 1vh;
   box-sizing: border-box;
 
-  max-width: 100%;
+  max-width: 80%;
   overflow: hidden;
 }
 
@@ -213,7 +194,7 @@ div.BigParagraph h1{
 }
 
 #Externship{
-  background-color: #C8ADC0;
+  background-color: #F6AE2D;
 }
 
 #WHPH{
