--- a/website-files/src/App.css
+++ b/website-files/src/App.css
@@ -39,7 +39,7 @@ body {
 #Navbar {
   display: flex;
 
-  height:5vh;
+  height: 5vh;
   align-items: flex-end;
   justify-content: flex-end;
   background-color: transparent;
@@ -62,6 +62,9 @@ body {
   background-color: #C8ADC0;
   text-decoration: none;
   font-family: Space Grotesk;
+
+  width: 15vw;
+
   font-size: 2vw;
   margin: 0.75vw;
   justify-content: flex-end;
