--- a/website-files/src/App.css
+++ b/website-files/src/App.css
@@ -7,6 +7,7 @@ body {
   padding: 0;
   background-color: #313B72;
   display: flex;
+  padding-bottom: 4vh;
 }
 
 .App {
@@ -38,18 +39,53 @@ body {
 
 #Navbar {
   display: flex;
-
   height: 5vh;
-  align-items: flex-end;
+  align-items: center;
   justify-content: flex-end;
   background-color: transparent;
   border-width: 0.1vw;
   border-left: black;
   border-right: black;
-  padding-top: 3vh;
+  padding: 2vh 2vw;
   position: sticky;
-  z-index: 1;
-  top: 1.5vh;
+  z-index: 1000;
+  top: 0;
+}
+
+.mobile-menu-button {
+  display: none;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  z-index: 1001;
+}
+
+.hamburger {
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: white;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+}
+
+.hamburger::before,
+.hamburger::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 3px;
+  background-color: white;
+  transition: all 0.3s ease-in-out;
+}
+
+.hamburger::before {
+  transform: translateY(-8px);
+}
+
+.hamburger::after {
+  transform: translateY(8px);
 }
 
 #Navbar .nav-links {
@@ -58,22 +94,18 @@ body {
   margin-right: 7vw;
 }
 
-#Navbar .nav-links a{
+#Navbar .nav-links a {
   background-color: #C8ADC0;
   text-decoration: none;
   font-family: Space Grotesk;
-
-  width: 15vw;
-
-  font-size: 2vw;
-  margin: 0.75vw;
-  justify-content: flex-end;
-  color: black;
   font-size: 100%;
+  margin: 0.75vw;
+  color: black;
 }
 
-#topLink{
-  width: 14vw;
+#topLink {
+  width: auto;
+  min-width: 140px;
   align-self: center;
   position: relative;
   box-sizing: border-box;
@@ -82,54 +114,113 @@ body {
   padding: 1% 2.5%;
   box-shadow: 1vh 1vh;
   transition: all ease 0.3s;
+  white-space: nowrap;
 }
 
-
-#topLink:hover{
+#topLink:hover {
   box-shadow: 0.5vh 0.5vh;
   top: 0.25vh;
 }
 
+@media screen and (max-width: 1024px) {
+  .mobile-menu-button {
+    display: block;
+  }
+
+  #Navbar {
+    justify-content: space-between;
+    padding: 1vh 4vw;
+  }
+
+  #Navbar .nav-links {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(49, 59, 114, 0.95);
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    transition: right 0.3s ease-in-out;
+    gap: 4vh;
+    padding: 0;
+  }
+
+  #Navbar .nav-links.active {
+    right: 0;
+  }
+
+  #Navbar .nav-links a {
+    font-size: 1.2rem;
+    margin: 1vh 0;
+    width: auto;
+    background-color: transparent;
+    color: white;
+  }
+
+  #topLink {
+    width: 80%;
+    max-width: 300px;
+    text-align: center;
+     padding: 2vh 4vw;
+    background: transparent;
+    border-color: white;
+    color: white;
+  }
+
+  .mobile-menu-button.active .hamburger {
+    background-color: transparent;
+  }
+
+  .mobile-menu-button.active .hamburger::before {
+    transform: rotate(45deg);
+  }
+
+  .mobile-menu-button.active .hamburger::after {
+    transform: rotate(-45deg);
+  }
+}
 
 .BigParagraph {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-
   height: auto;
-
   background-color: #B1DDF1;
-  
   font-family: Space Grotesk;
-
   color: white;
   border-style: solid;
   border-color: black;
-
   margin-left: 10vh;
   margin-right: 10vh;
   margin-top: 5vh;
   margin-bottom: 5vh;
-
   box-shadow: 1vh 1vh;
   box-sizing: border-box;
-
   max-width: 80%;
   overflow: hidden;
 }
-div.BigParagraph h1{
-  margin: 2vh;
-  color: black;
-  font-size: 100%;
-  font-family: Space Grotesk;
-}
 
-.BigParagraph img{
-  margin: 1vh 2vw;
+.BigParagraph img {
+  margin: 2vh auto 2vh auto;
   max-width: 25%;
   height: auto;
   min-width: none;
+  display: block;
+}
 
+.BigParagraph h1 {
+  margin: 2vh auto;
+  color: black;
+  font-size: 100%;
+  font-family: Space Grotesk;
+  padding: 3vh 8vw;
+  background: none;
+  text-align: center;
+  box-sizing: border-box;
+  max-width: 80%;
   display: block;
 }
 
@@ -171,10 +262,13 @@ div.BigParagraph h1{
   margin: 1%; 
 }
 
-.Projects img{
+.Projects img {
   width: 30%;
   height: auto;
   margin: 1% 5%;
+  object-fit: contain;
+  max-height: 180px;
+  display: block;
 }
 
 .Projects video{
@@ -208,18 +302,31 @@ div.BigParagraph h1{
 #ProjectTitle {
   background-color: #DBB4AD;
   display: flex;
-  justify-content: center; 
-  align-items: center; 
+  justify-content: center;
+  align-items: center;
   width: 90vw;
+  max-width: 700px;
+  margin: 2vh auto;
+  box-sizing: border-box;
+  padding: 1vh 2vw;
+}
+#ProjectTitle h1 {
+  font-family: Space Grotesk;
+  text-align: center;
+  margin: 1%;
+  font-size: clamp(1.5rem, 5vw, 2.5rem);
 }
 
-
-#AboutMeBox{
+#AboutMeBox {
   display: flex;
-  flex-direction: row; 
-  justify-content: space-around;
+  flex-direction: row;
+  justify-content: center;
+  align-items: stretch;
+  width: 100%;
+  gap: 2vw;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
-
 
 #ContactBox{
   display: flex;
@@ -257,4 +364,142 @@ div.BigParagraph h1{
 
 #ContactBox a:first-child{
   flex: 0 1 100%;
+}
+
+.AboutMeGrid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3vh;
+  width: 100%;
+  margin: 0;
+  padding: 0 2vw;
+  box-sizing: border-box;
+}
+
+.HorizontalItems {
+  width: 100%;
+  min-width: 0;
+  max-width: none;
+  flex: unset;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.HorizontalItems img {
+  width: 100%;
+  aspect-ratio: 4/3;
+  object-fit: cover;
+  display: block;
+  border-radius: 10px 10px 0 0;
+}
+
+@media screen and (max-width: 700px) {
+  html, body {
+    width: 100vw !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    max-width: 100vw !important;
+    box-sizing: border-box;
+    overflow-x: hidden !important;
+  }
+  .App {
+    width: 100% !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    box-sizing: border-box;
+    overflow-x: hidden !important;
+  }
+  #AboutMeBox {
+    flex-direction: column;
+    align-items: center;
+    gap: 3vh;
+    width: 100%;
+    margin: 0;
+    padding: 0 1rem;
+    box-sizing: border-box;
+  }
+  .BigParagraph {
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 2vw;
+    margin-right: 2vw;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
+    max-width: 96vw;
+    padding: 2vw 2vw;
+  }
+  .BigParagraph img {
+    max-width: 40vw;
+    margin: 2vh auto 2vh auto;
+    display: block;
+  }
+  .BigParagraph h1 {
+    font-size: 1.1rem;
+    padding: 2vh 6vw;
+    margin: 1vh auto;
+    word-break: break-word;
+    max-width: 94%;
+    text-align: center;
+  }
+  .AboutMeGrid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3vh;
+    width: 100%;
+    margin: 0;
+    padding: 0 1rem;
+    box-sizing: border-box;
+  }
+  .HorizontalItems {
+    width: 100% !important;
+    max-width: 100% !important;
+    margin: 2vh 0 0 0 !important;
+    min-width: 0;
+    box-sizing: border-box;
+    border-radius: 0 0 10px 10px;
+  }
+  .HorizontalItems img {
+    width: 100% !important;
+    height: auto !important;
+    max-height: 200px;
+    object-fit: cover;
+    border-radius: 10px 10px 0 0;
+  }
+  .HorizontalItems h1, .HorizontalItems p {
+    text-align: center;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .Projects div {
+    flex-direction: column !important;
+    align-items: center !important;
+  }
+  .Projects img {
+    max-width: 60%;
+    margin: 2vh auto;
+    display: block;
+    height: auto;
+    object-fit: contain;
+  }
+}
+
+@media screen and (min-width: 701px) {
+  .AboutMeGrid {
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: center;
+    gap: 2vw;
+    padding: 0 2vw;
+  }
+  .HorizontalItems {
+    flex: 1 1 0;
+    min-width: 0;
+    max-width: 400px;
+    width: 100%;
+    margin: 0;
+  }
 }
